--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,10 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.1'
+        classpath 'com.google.gms:google-services:4.3.3'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,6 +21,10 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+        flatDir {
+            dirs 'libs'
+        }
+
     }
 }
 
